; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_mxfdec.c_mxf_read_identification_metadata.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_mxfdec.c_mxf_read_identification_metadata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32* }

@.str = private unnamed_addr constant [13 x i8] c"company_name\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"product_name\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"product_version\00", align 1
@.str.3 = private unnamed_addr constant [12 x i8] c"product_uid\00", align 1
@.str.4 = private unnamed_addr constant [18 x i8] c"modification_date\00", align 1
@.str.5 = private unnamed_addr constant [21 x i8] c"application_platform\00", align 1
@.str.6 = private unnamed_addr constant [15 x i8] c"generation_uid\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"uid\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i32, i32, i32, i32)* @mxf_read_identification_metadata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mxf_read_identification_metadata(i8* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.TYPE_5__, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_6__*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca %struct.TYPE_5__, align 4
  %17 = alloca i8*, align 8
  %18 = alloca i32, align 4
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  store i32 %4, i32* %19, align 4
  store i8* %0, i8** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %20 = load i8*, i8** %8, align 8
  %21 = bitcast i8* %20 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %21, %struct.TYPE_6__** %13, align 8
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %13, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  store i32* %24, i32** %14, align 8
  %25 = bitcast %struct.TYPE_5__* %16 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %25, i8 0, i64 4, i1 false)
  store i8* null, i8** %17, align 8
  %26 = load i32, i32* %10, align 4
  switch i32 %26, label %66 [
    i32 15361, label %27
    i32 15362, label %31
    i32 15364, label %35
    i32 15365, label %39
    i32 15366, label %45
    i32 15368, label %50
    i32 15369, label %54
    i32 15370, label %60
  ]

27:                                               ; preds = %6
  %28 = load i32*, i32** %9, align 8
  %29 = load i8*, i8** %17, align 8
  %30 = call i32 @SET_STR_METADATA(i32* %28, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* %29)
  br label %66

31:                                               ; preds = %6
  %32 = load i32*, i32** %9, align 8
  %33 = load i8*, i8** %17, align 8
  %34 = call i32 @SET_STR_METADATA(i32* %32, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8* %33)
  br label %66

35:                                               ; preds = %6
  %36 = load i32*, i32** %9, align 8
  %37 = load i8*, i8** %17, align 8
  %38 = call i32 @SET_STR_METADATA(i32* %36, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0), i8* %37)
  br label %66

39:                                               ; preds = %6
  %40 = load i32*, i32** %9, align 8
  %41 = load i8*, i8** %17, align 8
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @SET_UID_METADATA(i32* %40, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0), i32 %43, i8* %41)
  br label %66

45:                                               ; preds = %6
  %46 = load i32*, i32** %9, align 8
  %47 = load i32, i32* %18, align 4
  %48 = load i8*, i8** %17, align 8
  %49 = call i32 @SET_TS_METADATA(i32* %46, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.4, i64 0, i64 0), i32 %47, i8* %48)
  br label %66

50:                                               ; preds = %6
  %51 = load i32*, i32** %9, align 8
  %52 = load i8*, i8** %17, align 8
  %53 = call i32 @SET_STR_METADATA(i32* %51, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.5, i64 0, i64 0), i8* %52)
  br label %66

54:                                               ; preds = %6
  %55 = load i32*, i32** %9, align 8
  %56 = load i8*, i8** %17, align 8
  %57 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %58 = load i32, i32* %57, align 4
  %59 = call i32 @SET_UID_METADATA(i32* %55, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.6, i64 0, i64 0), i32 %58, i8* %56)
  br label %66

60:                                               ; preds = %6
  %61 = load i32*, i32** %9, align 8
  %62 = load i8*, i8** %17, align 8
  %63 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %64 = load i32, i32* %63, align 4
  %65 = call i32 @SET_UID_METADATA(i32* %61, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i64 0, i64 0), i32 %64, i8* %62)
  br label %66

66:                                               ; preds = %6, %60, %54, %50, %45, %39, %35, %31, %27
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @SET_STR_METADATA(i32*, i8*, i8*) #2

declare dso_local i32 @SET_UID_METADATA(i32*, i8*, i32, i8*) #2

declare dso_local i32 @SET_TS_METADATA(i32*, i8*, i32, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
